modified style & html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <div class="wrapper">
+        <div class="wrapper header-content">
 
             <nav class="wrapper">
                 <ul class="home-ul">
@@ -26,7 +26,7 @@
             </nav>
 
             <div class="banner-text wrapper">
-                <h1>Under The Sea</h1>
+                <h1>Under <br> The <br> Sea</h1>
             </div>
 
         </div>
