renamed one img file, modified html & css for about section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,35 @@
             </div>
 
         </div>
+
+        <!-- <div class="home-box-image">
+                <img src="./assets/home-box-header-3d.png" alt="">
+        </div> -->
+
+
     </header>
+
+    <main>
+
+        <section class="about">
+
+            <div class="home-box-image">
+                <img src="./assets/home-box-header-3d.png" alt="">
+            </div>
+
+            <div class="about-details wrapper">
+
+                <h2>what is Under The Sea?</h2>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum repellat deleniti, veritatis nihil quam veniam maxime eligendi dolores porro eveniet accusamus. Distinctio, assumenda dolore temporibus praesentium aspernatur voluptatum hic? Placeat beatae consectetur ad labore soluta molestiae, fuga ipsam quibusdam unde recusandae dolorem. Nemo harum autem a fugit ipsa, voluptatum quidem.</p>
+
+                <button><a href="#">find out more</a></button>
+
+            </div>
+
+        </section>
+
+    </main>
     
 </body>
 </html>
