worked on new-addition section of home page

--- a/index.html
+++ b/index.html
@@ -50,13 +50,66 @@
 
                 <h2>what is Under The Sea?</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum repellat deleniti, veritatis nihil quam veniam maxime eligendi dolores porro eveniet accusamus. Distinctio, assumenda dolore temporibus praesentium aspernatur voluptatum hic? Placeat beatae consectetur ad labore soluta molestiae, fuga ipsam quibusdam unde recusandae dolorem. Nemo harum autem a fugit ipsa, voluptatum quidem.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At soluta nesciunt, fuga natus illum debitis facilis officiis atque nam aspernatur quod esse, cum molestiae blanditiis ipsam ducimus consequuntur ipsum adipisci.</p>
 
                 <button><a href="#">find out more</a></button>
 
             </div>
 
         </section>
+
+        <section class="new-addition">
+
+            <div class="fish-box-1">
+                <div class="new-addition-calc new-addition-img">
+                    <img src="./assets/left-image.jpg" alt="A women watching beautiful fishes in indoor aquarium">
+                </div>
+
+                <div class="fish-details-box  new-addition-calc">
+                    <h3>new addition</h3>
+
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero dolor nemo ut, consectetur unde laudantium repellat. Sit voluptatum non illo iste aperiam inventore deserunt eveniet! Alias quasi, consequatur hic enim esse accusamus!</p>
+
+                    <button><a href="#">Read More</a></button>
+
+                </div>
+
+            </div>
+
+             <div class="fish-box-2">
+
+                <div class="clown-fish-details new-addition-calc">
+                    <h3>Meet Real Nemo</h3>
+
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero dolor nemo ut, consectetur unde laudantium repellat. Sit voluptatum non illo iste aperiam inventore deserunt eveniet! Alias quasi, consequatur hic enim esse accusamus!</p>
+
+                    <button><a href="#">Read More</a></button>
+
+                </div>
+
+                <div class="new-addition-calc clown-fish-img">
+                    <img src="./assets/right-image.jpg" alt="A beautiful clown-fish in the deep blue sea">
+                </div>
+
+            </div>
+            
+
+
+
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
 
     </main>
     
