--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
 
                 <div class="contact-container">
                     <div class="location">
-                        <h3>Location</h3>
+                        <h4><a href="./contact.html">Location</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quasi totam delectus sunt, laboriosam illo architecto, velit temporibus, in distinctio expedita dicta accusantium dolorum nulla!</p>
                     </div>
                         
                     <div class="community">
-                        <h3>Community</h3>
+                        <h4><a href="./blog.html">Community</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quasi totam delectus sunt, laboriosam illo architecto, velit temporibus, in distinctio expedita dicta accusantium dolorum nulla!</p>
                     </div>
                 </div>
@@ -109,12 +109,12 @@
                 <div class="contact-container">
 
                     <div class="blog">
-                        <h3>Blog</h3>
+                        <h4><a href="./blog.html">Blog</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quasi totam delectus sunt, laboriosam illo architecto, velit temporibus, in distinctio expedita dicta accusantium dolorum nulla!</p>
                     </div>
 
                     <div class="get-in-touch">
-                        <h3>Get in touch</h3>
+                        <h4><a href="./contact.html">Get in touch</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quasi totam delectus sunt, laboriosam illo architecto, velit temporibus, in distinctio expedita dicta accusantium dolorum nulla!</p>
                     </div>
 
@@ -136,7 +136,7 @@
                 </div>
 
                 <div>
-                    <h4>This month profile</h4>
+                    <h5>This month profile</h5>
 
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque praesentium excepturi consequuntur repudiandae quaerat aspernatur sed, sequi mollitia laudantium id quia nam cum repellat hic ipsa tenetur nesciunt quo ea rerum amet libero velit? Dicta praesentium nemo, eveniet doloribus, facere deleniti labore voluptatem vel excepturi ea perspiciatis blanditiis id asperiores eaque possimus illo recusandae maxime ipsum tenetur ipsam? Soluta, assumenda!</p>
 
