--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="homepage-header">
         <div class="header-content">
 
             <nav class="wrapper">
