--- a/contact.html
+++ b/contact.html
@@ -20,26 +20,102 @@
   </head>
   <body>
     <header class="contact-header">
+      <div class="contact-header-flex">
+        <nav class="wrapper">
+          <ul class="contact-ul">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contact.html">contact</a></li>
+          </ul>
+        </nav>
 
-      <ul class="contact-ul">
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="./blog.html">Blog</a></li>
-        <li><a href="./contact.html">contact</a></li>
-      </ul>
-
-      <div class="contact-banner wrapper">
-
-        <h1>Get in touch</h1>
-
+        <div class="contact-banner-text wrapper">
+          <h1>Get in touch</h1>
+        </div>
       </div>
-
     </header>
 
+    <main>
+      <section class="contact-section">
+        <div class="contact-flex wrapper">
+          <div class="contact-box">
+            <div class="social-links">
+              <ul>
+                <li>
+                  <a href="https://www.facebook.com/" target="_blank"
+                    ><i class="fab fa-facebook-f"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com" target="_blank"
+                    ><i class="fab fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com" target="_blank"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://www.whatsapp.com" target="_blank"
+                    ><i class="fab fa-whatsapp"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
 
+            <address>
+              <p><a href="mailto:info@email.com">info@email.com</a></p>
+              <p><a href="tel:123-456-7890">123-456-7890</a></p>
+              <p>123 Queen Street West, Unit 10</p>
+              <p>Toronto, Ontario</p>
+              <p>M5V2D5</p>
+            </address>
+          </div>
 
+          <div class="form-area">
+            <form action="#">
+              <div class="name">
+                <label for="name"></label>
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  placeholder="Name"
+                  required
+                />
+              </div>
 
+              <div class="email">
+                <label for="email"></label>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="Email address"
+                  required
+                />
+              </div>
 
+              <div class="message">
+                <label for="message"></label>
+                <textarea
+                  name="message"
+                  id="message"
+                  placeholder="Message"
+                ></textarea>
+              </div>
 
+              <button type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>Copyright &copy 2021 Juno College</p>
+    </footer>
   </body>
 </html>
