worked on contact page, changed few class  names of both home page and contact page, worked on styles

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <header class="contact-header">
+    <header class="contact-page-header">
       <div class="contact-header-flex">
         <nav class="wrapper">
           <ul class="contact-ul">
@@ -37,9 +37,9 @@
     </header>
 
     <main>
-      <section class="contact-section">
-        <div class="contact-flex wrapper">
-          <div class="contact-box">
+      <section class="contact-page-section">
+        <div class="contact-page-flex wrapper">
+          <div class="contact-page-details-box">
             <div class="social-links">
               <ul>
                 <li>
@@ -76,26 +76,28 @@
 
           <div class="form-area">
             <form action="#">
-              <div class="name">
-                <label for="name"></label>
-                <input
-                  type="text"
-                  name="name"
-                  id="name"
-                  placeholder="Name"
-                  required
-                />
-              </div>
+              <div class="name-email">
+                <div class="name">
+                  <label for="name"></label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    placeholder="Name"
+                    required
+                  />
+                </div>
 
-              <div class="email">
-                <label for="email"></label>
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  placeholder="Email address"
-                  required
-                />
+                <div class="email">
+                  <label for="email"></label>
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="Email address"
+                    required
+                  />
+                </div>
               </div>
 
               <div class="message">
