added new file blog-style, worked on blog page, link section to specific areas, worked on styles

--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Under The Sea - Blog page</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@700&family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body class="blog-body">
+    <header class="blog-page-header">
+      <div class="blog-header-flex">
+        <nav class="wrapper">
+          <ul class="blog-ul">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contact.html">contact</a></li>
+          </ul>
+        </nav>
+
+        <div class="blog-banner-text wrapper">
+          <h1>Blog</h1>
+        </div>
+      </div>
+    </header>
+
+    <main class="blog-main">
+      <div class="blog-left-part">
+        <section class="about-the-sea" id="about-the-sea">
+          <div class="side-blog-img">
+            <img
+              src="./assets/side-blog-image.jpg"
+              alt="People are watching huge shark and colorful fishes inside indoor aquarium"
+            />
+          </div>
+
+          <div class="side-blog-details">
+            <div>
+              <h2>About under the sea</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                quis maiores a! <a href="./index.html">Find out more.</a>
+              </p>
+            </div>
+
+            <div>
+              <h2>Recent posts</h2>
+              <ul>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Quibusdam quidem esse laborum.</li>
+                <li>Dolore, quas! Aut voluptates repu.</li>
+                <li>Placeat voluptatem eum, amet harum.</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <div class="blog-right-part">
+        <section class="blog-post-sectiopn">
+          <div class="blog-post-img">
+            <img
+              src="./assets/blog-post-image.jpg"
+              alt="beautiful red coral & clown fish inside the indoor aquarium"
+            />
+          </div>
+
+          <div class="blog-post-details">
+            <h3>Discovering new species</h3>
+            <p>Monday May 3rd, 2021 by Shouvik</p>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+              itaque quidem saepe commodi minus ducimus vitae harum tenetur ut
+              assumenda, quam excepturi at, a possimus alias voluptatum
+              accusamus, totam quasi libero corporis non dolorum dicta! Quo sint
+              repellendus ut aspernatur eum facilis harum! Quam molestias,
+              accusantium odit architecto nulla officiis suscipit assumenda
+              omnis quaerat provident iste? Laborum ad minus culpa sit tempora
+              tempore, blanditiis nulla. Tempore quasi voluptatum nulla,
+              expedita sapiente, voluptatibus asperiores, vitae neque quo quidem
+              porro ad id corporis? Fuga dolorem corporis incidunt ipsa eos
+              harum animi voluptatibus ratione esse placeat sit quo natus nemo
+              enim officia, voluptatem mollitia excepturi vel? Expedita
+              aspernatur, odio incidunt impedit, nesciunt animi delectus fuga a
+              sint accusamus iure quo, eos eius qui quis temporibus. Ipsa
+              maiores laborum minima totam asperiores aperiam dolore. Minus
+              repellendus, totam consequuntur ab enim debitis excepturi
+              reprehenderit eaque, odit libero, labore eum facilis eius placeat
+              voluptates consectetur nemo alias maiores officiis quasi hic saepe
+              maxime? Voluptas voluptates, harum, illum fugiat repellat dolores
+              provident dolor ipsam reiciendis rerum at officia, sint rem est
+              unde ullam ad. Provident necessitatibus consectetur cumque nostrum
+              voluptate tempora molestias aliquid. Temporibus dolore eum numquam
+              laborum labore. Dolor necessitatibus earum suscipit enim corporis
+              quia ipsa!
+            </p>
+          </div>
+        </section>
+
+        <section class="comment-box">
+          <h4>Comments:</h4>
+          <div class="comment-section">
+            <div class="comment-box-flex">
+              <div>
+                <img
+                  src="./assets/comment-1.jpg"
+                  alt="A beautiful women with bouffant hairstyle"
+                />
+              </div>
+              <div>
+                <h5>Tuesday October 9th, 2018 by Jeremy</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Officiis ipsa non voluptas laborum consectetur ipsam nesciunt
+                  ducimus repellat aut similique sunt et officia placeat sequi
+                  ut illum magnam totam qui sapiente alias, vel iusto
+                  consequatur?
+                </p>
+              </div>
+            </div>
+
+            <div class="comment-box-flex">
+              <div>
+                <img
+                  src="./assets/comment-2.jpg"
+                  alt="A beautiful women with short hair wearing a jeans shirt"
+                />
+              </div>
+              <div>
+                <h5>Wednesday October 10th, 2018 by Julia</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Officiis ipsa non voluptas laborum consectetur ipsam nesciunt
+                  ducimus repellat aut similique sunt et officia placeat sequi
+                  ut illum magnam totam qui sapiente alias, vel iusto
+                  consequatur?
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="blog-form-section">
+          <div class="blog-form-area">
+            <form action="#">
+              <div class="name-email">
+                <div class="name">
+                  <label for="name"></label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    placeholder="Name"
+                    required
+                  />
+                </div>
+
+                <div class="email">
+                  <label for="email"></label>
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="Email address"
+                    required
+                  />
+                </div>
+              </div>
+
+              <div class="message">
+                <label for="message"></label>
+                <textarea
+                  name="message"
+                  id="message"
+                  placeholder="Comment"
+                ></textarea>
+              </div>
+
+              <button type="submit">Post comment</button>
+            </form>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer>
+      <p>Copyright &copy 2021 Juno College</p>
+    </footer>
+
+  </body>
 </html>
