--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-      <section class="contact-page-section">
+      <section class="contact-page-section" id="location">
         <div class="contact-page-flex wrapper">
           <div class="contact-page-details-box">
             <div class="social-links">
