--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat voluptatem eum, amet harum, debitis laboriosam repellendus, sed cumque iusto sapiente incidunt. Quibusdam quidem esse laborum vero harum? Iste similique dolorum hic est numquam! Dolore, quas! Aut voluptates repudiandae itaque culpa facere ratione. Expedita, voluptatum corrupti!</p>
 
-                <button><a href="#">find out more</a></button>
+                <button><a href="./blog.html#about-the-sea">find out more</a></button>
 
             </div>
 
@@ -65,7 +65,7 @@
 
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero dolor nemo ut, consectetur unde laudantium repellat. Sit voluptatum non illo iste aperiam inventore deserunt eveniet! Alias quasi, consequatur hic enim esse accusamus!</p>
 
-                    <button><a href="#">Read More</a></button>
+                    <button><a href="./blog.html">Read More</a></button>
 
                 </div>
 
@@ -78,7 +78,7 @@
 
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero dolor nemo ut, consectetur unde laudantium repellat. Sit voluptatum non illo iste aperiam inventore deserunt eveniet! Alias quasi, consequatur hic enim esse accusamus!</p>
 
-                    <button><a href="#">Read More</a></button>
+                    <button><a href="./blog.html">Read More</a></button>
 
                 </div>
 
@@ -96,12 +96,12 @@
 
                 <div class="contact-container">
                     <div class="location">
-                        <h4><a href="./contact.html">Location</a></h4>
+                        <h4><a href="./contact.html#location">Location</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quasi totam delectus sunt, laboriosam illo architecto, velit temporibus, in distinctio expedita dicta accusantium dolorum nulla!</p>
                     </div>
                         
                     <div class="community">
-                        <h4><a href="./blog.html">Community</a></h4>
+                        <h4><a href="./contact.html#location">Community</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quasi totam delectus sunt, laboriosam illo architecto, velit temporibus, in distinctio expedita dicta accusantium dolorum nulla!</p>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     </div>
 
                     <div class="get-in-touch">
-                        <h4><a href="./contact.html">Get in touch</a></h4>
+                        <h4><a href="./contact.html#location">Get in touch</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quasi totam delectus sunt, laboriosam illo architecto, velit temporibus, in distinctio expedita dicta accusantium dolorum nulla!</p>
                     </div>
 
