modified all html files, fixed bugs and adjusted styling

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
         <nav class="wrapper">
           <ul class="blog-ul">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./blog.html#about-the-sea">About</a></li>
             <li><a href="./blog.html">Blog</a></li>
             <li><a href="./contact.html">contact</a></li>
           </ul>
@@ -34,7 +34,7 @@
           <h1>Blog</h1>
         </div>
       </div>
-    </header>
+    </header> <!-- blog-page-header -->
 
     <main class="blog-main">
       <div class="blog-left-part">
@@ -66,10 +66,10 @@
             </div>
           </div>
         </section>
-      </div>
+      </div> <!-- blog-left-part ends here -->
 
       <div class="blog-right-part">
-        <section class="blog-post-sectiopn">
+        <section class="blog-post-section">
           <div class="blog-post-img">
             <img
               src="./assets/blog-post-image.jpg"
@@ -109,6 +109,7 @@
             </p>
           </div>
         </section>
+        <!-- blog-post-section ends here -->
 
         <section class="comment-box">
           <h4>Comments:</h4>
@@ -151,7 +152,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> <!-- comment-box section ends here -->
 
         <section class="blog-form-section">
           <div class="blog-form-area">
@@ -192,8 +193,9 @@
               <button type="submit">Post comment</button>
             </form>
           </div>
-        </section>
-      </div>
+        </section> <!-- blog-form-section ends here -->
+      </div> <!-- blog-right-part ends here -->
+      
     </main>
 
     <footer>
