--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="wrapper">
                 <ul class="home-ul">
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="./blog.html#about-the-sea">About</a></li>
                     <li><a href="./blog.html">Blog</a></li>
                     <li><a href="./contact.html">contact</a></li>
                 </ul>
@@ -38,7 +38,7 @@
         <section class="about">
 
             <div class="home-box-image">
-                <img src="./assets/home-box-header-3d.png" alt="">
+                <img src="./assets/home-box-header-3d.png" alt="goldfish image with 3d effect">
             </div>
 
             <div class="about-details wrapper">
@@ -51,7 +51,7 @@
 
             </div>
 
-        </section>
+        </section> <!-- about section ends here -->
 
         <section class="new-addition">
 
@@ -65,7 +65,7 @@
 
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero dolor nemo ut, consectetur unde laudantium repellat. Sit voluptatum non illo iste aperiam inventore deserunt eveniet! Alias quasi, consequatur hic enim esse accusamus!</p>
 
-                    <button><a href="./blog.html">Read More</a></button>
+                    <button><a href="./blog.html#about-the-sea">Read More</a></button>
 
                 </div>
 
@@ -78,7 +78,7 @@
 
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero dolor nemo ut, consectetur unde laudantium repellat. Sit voluptatum non illo iste aperiam inventore deserunt eveniet! Alias quasi, consequatur hic enim esse accusamus!</p>
 
-                    <button><a href="./blog.html">Read More</a></button>
+                    <button><a href="./blog.html#about-the-sea">Read More</a></button>
 
                 </div>
 
@@ -88,7 +88,7 @@
 
             </div>
 
-        </section>
+        </section> <!-- new-addition section ends here -->
 
         <section class="contact">
 
@@ -122,7 +122,7 @@
                 
             </div>
 
-        </section>
+        </section> <!-- contact section ends here -->
 
         <section class="month-profile">
 
@@ -140,13 +140,13 @@
 
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque praesentium excepturi consequuntur repudiandae quaerat aspernatur sed, sequi mollitia laudantium id quia nam cum repellat hic ipsa tenetur nesciunt quo ea rerum amet libero velit? Dicta praesentium nemo, eveniet doloribus, facere deleniti labore voluptatem vel excepturi ea perspiciatis blanditiis id asperiores eaque possimus illo recusandae maxime ipsum tenetur ipsam? Soluta, assumenda!</p>
 
-                    <button><a href="#">find out more</a></button>
+                    <button><a href="./blog.html#about-the-sea">find out more</a></button>
                 </div>
 
             </div>
 
 
-        </section>
+        </section> <!-- month profile section ends here -->
 
         <section class="gallery">
 
@@ -160,7 +160,7 @@
                 <img src="./assets/gallery-image-3.jpg" alt="small fishes swiming in the indoor aquarium">
             </div>
 
-        </section>
+        </section> <!-- gallery section ends here -->
 
 
     </main>
