--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <nav class="wrapper">
           <ul class="contact-ul">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./blog.html#about-the-sea">About</a></li>
             <li><a href="./blog.html">Blog</a></li>
             <li><a href="./contact.html">contact</a></li>
           </ul>
@@ -34,7 +34,7 @@
           <h1>Get in touch</h1>
         </div>
       </div>
-    </header>
+    </header> <!-- contact-page-header ends here -->
 
     <main>
       <section class="contact-page-section" id="location">
@@ -72,7 +72,7 @@
               <p>Toronto, Ontario</p>
               <p>M5V2D5</p>
             </address>
-          </div>
+          </div> <!-- contact-page-details-box ends here -->
 
           <div class="form-area">
             <form action="#">
@@ -111,13 +111,17 @@
 
               <button type="submit">Submit</button>
             </form>
-          </div>
-        </div>
-      </section>
+          </div> <!-- form-area ends here -->
+
+        </div> <!-- contact-page-flex ends here -->
+
+      </section> <!-- contact-page-section ends here -->
+
     </main>
 
     <footer>
       <p>Copyright &copy 2021 Juno College</p>
     </footer>
+    
   </body>
 </html>
