--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="header-content">
 
             <nav class="wrapper">
-                <ul class="home-ul">
+                <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
+                <ul class="home-ul" id="home-ul">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./blog.html#about-the-sea">About</a></li>
                     <li><a href="./blog.html">Blog</a></li>
@@ -168,6 +169,8 @@
     <footer>
         <p>Copyright &copy; 2021 Juno College</p>
     </footer>
+
+    <script src="./script.js"></script>
     
 </body>
 </html>
