hamburger menu style fixed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-content">
 
             <nav class="wrapper">
-
+                <div class="testing">
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 
                 <ul class="home-ul" id="home-ul">
@@ -26,6 +26,7 @@
                     <li><a href="./blog.html">Blog</a></li>
                     <li><a href="./contact.html">contact</a></li>
                 </ul>
+                </div>
             </nav>
 
             <div class="banner-text wrapper">
